--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -392,7 +392,7 @@
     <div class="ft-l"></div>
     <footer class="ft">
       <div class="ft__buttons f-item1">
-        <a href="index.html">슬기로운 반려생활</a>
+        <a href="index.html" th:href="@{/}">슬기로운 반려생활</a>
       </div>
       <div class="ft__mid-area">
         <div class="ft__buttons f-item2">
