병원정보 테이블 추가

--- a/src/main/resources/static/css/member.css
+++ b/src/main/resources/static/css/member.css
@@ -340,3 +340,10 @@ main form input[type='number' i] {
 input:focus {
   outline: none;
 }
+
+.information {
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #ccc;
+}
+
