--- a/src/main/resources/templates/member/member_signup.html
+++ b/src/main/resources/templates/member/member_signup.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
   ></script>
   <!--  회원가입 css -->
-  <link rel="stylesheet" href="../css/member.css" />
+  <link rel="stylesheet" href="../../css/member.css" />
   <title>회원가입 양식</title>
 </head>
 
@@ -33,34 +33,55 @@
     <div id="mainTitle">
       <i class="fa-solid fa-dog fa-2x"></i>
       <h2 style="font-weight: bold">
-        <a href="index.html" th:href="@{/}">슬기로운 반려생활</a>
+        <a href="index.html"  th:href="@{/}">슬기로운 반려생활</a>
       </h2>
     </div>
     <section class="joinForm">
-      <form action="" method="post" th:object="${joinForm}">
+      <form action="" method="post">
         <ul class="joinForm__list">
           <li class="joinForm__list__items">
-            <label for="nickname" th:field="*{userNick}">닉네임</label
-            ><input type="text" id="nickname" />
+            <label for="nickname">닉네임</label
+            ><input
+              type="text"
+              id="nickname"
+              maxlength="10"
+              spellcheck="false"
+          />
+            <p class="information nickname">
+              닉네임은 영문, 숫자, 한글 조합으로 10자까지 가능합니다.
+            </p>
+            <p class="err nickname"></p>
           </li>
           <li class="joinForm__list__items">
-            <label for="id">아이디</label><input type="text" id="id" />
+            <label for="id">아이디</label
+            ><input type="text" id="id" maxlength="15" spellcheck="false" />
+            <p class="information id">
+              아이디는 영문, 숫자 조합으로 15자까지 가능합니다.
+            </p>
+            <p class="err id"></p>
           </li>
           <li class="joinForm__list__items">
             <label for="pw">비밀번호</label
-            ><input type="password" id="pw" />
+            ><input type="password" id="pw" maxlength="20" />
+            <p class="information pw">
+              비밀번호는 영문 대소문자, 숫자조합으로 8~20자 가능합니다.
+            </p>
+            <p class="err pw"></p>
           </li>
           <li class="joinForm__list__items">
-            <label for="pwCkeck">비밀번호확인</label
-            ><input type="password" id="pwCkeck" />
+            <label for="pwCheck">비밀번호확인</label
+            ><input type="password" id="pwCheck" />
+            <p class="err pwCheck"></p>
           </li>
           <li class="joinForm__list__items">
             <label for="email">이메일</label
-            ><input type="email" id="email" />
+            ><input type="email" id="email" spellcheck="false" />
+            <p class="err email"></p>
           </li>
           <li class="joinForm__list__items">
-            <label for="num">이메일인증번호</label
-            ><input type="number" id="num" />
+            <label for="emailCheck">이메일인증번호</label
+            ><input type="number" id="emailCheck" />
+            <p class="err emailCheck"></p>
           </li>
         </ul>
         <button type="button" id="loginBtn">회원가입</button>
@@ -83,11 +104,5 @@
   <div class="ft-r"></div>
 </div>
 </body>
-<script>
-    const $loginBtn = document.getElementById('loginBtn');
-    const $loginPopup = document.getElementById('loginPopup');
-    $loginBtn.addEventListener('click', e => {
-      $loginPopup.showModal();
-    });
-  </script>
+<script src="../../js/member_signup.js"></script>
 </html>
