--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -116,7 +116,7 @@
 
 #subTitle {
   width: 150px;
-  font-size: 1.2em;
+  font-size: 1.1rem;
   background-color: var(--color-grey1);
   border-radius: 20px;
   text-align: center;
@@ -136,8 +136,8 @@
 
 .container__content.item1 .item1__title {
   font-weight: bold;
-  font-size: 1.8em;
-  line-height: 1em;
+  font-size: 1.4rem;
+  line-height: 2rem;
   margin-top: 10px;
 }
 
@@ -194,8 +194,8 @@
 
 .item2__title {
   font-weight: bold;
-  font-size: 1.8em;
-  line-height: 1em;
+  font-size: 1.4rem;
+  line-height: 2rem;
   margin-top: 10px;
 }
 
@@ -246,8 +246,8 @@
 
 .item3__title {
   font-weight: bold;
-  font-size: 1.8em;
-  line-height: 1em;
+  font-size: 1.4rem;
+  line-height: 2rem;
   margin-top: 10px;
 }
 
