--- a/src/main/resources/static/css/theme/reset.css
+++ b/src/main/resources/static/css/theme/reset.css
@@ -1,18 +1,26 @@
 @charset "utf-8";
- /* reset css : 기본 요소의 css 초기화*/
- body,figure,ul {
-    margin:0; padding:0;
-  }
+/* reset css : 기본 요소의 css 초기화*/
+body,
+figure,
+ul {
+  margin: 0;
+  padding: 0;
+}
 
-  ul {
-    list-style: none;
-  }
+ul {
+  list-style: none;
+}
 
-  h1,h2,h3{
-    margin: 0; padding: 0;
-  }
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+  cursor: default;
+}
 
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
+a {
+  text-decoration: none;
+  color: inherit;
+}
