--- a/src/main/resources/templates/member/member_signup.html
+++ b/src/main/resources/templates/member/member_signup.html
@@ -76,6 +76,7 @@
             <label for="email">이메일</label
             ><input type="email" id="email" spellcheck="false" />
             <p class="err email"></p>
+            <button>인증번호 받기</button>
           </li>
           <li class="joinForm__list__items">
             <label for="emailCheck">이메일인증번호</label
@@ -103,10 +104,7 @@
   <div class="ft-r"></div>
 </div>
 </body>
-<<<<<<< HEAD
-<script src="../../js/member_signup.js"></script>
+
+<script src="/js/member_signup.js"></script>
 </html>
-=======
-<script src="../js/member_signup.js"></script>
-</html>
->>>>>>> 516b34bd0e936d7e7e7b8edd7233e0e118ffe3cb
+
